<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bno055_bringup</name>
  <version>0.0.0</version>
  <description>BNO055 bringup package</description>
  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
  <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>bno055</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
