<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f9p_ublox</name>
  <version>1.0.0</version>
  <description>Package that bringups the F9P GNSS modules using the Ublox driver</description>
  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
  <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ublox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
